# TuDu

./: Cargo.toml  LICENSE  README.md  build.rs  prompts.txt
src/: main.rs  tray_win.rs
ui/: appwindow.slint
